syntax = "proto3";
package thesixnetwork.sixnft.nftmngr;

import "gogoproto/gogo.proto";
import "nftmngr/latest/params.proto";
import "nftmngr/latest/nft_schema.proto";
import "nftmngr/latest/nft_data.proto";
import "nftmngr/latest/action_by_ref_id.proto";
import "nftmngr/latest/organization.proto";
import "nftmngr/latest/nft_schema_by_contract.proto";
import "nftmngr/latest/nft_fee_config.proto";
import "nftmngr/latest/nft_fee_balance.proto";
import "nftmngr/latest/metadata_creator.proto";
import "nftmngr/latest/nft_collection.proto";
import "nftmngr/latest/action_executor.proto";
import "nftmngr/latest/schema_attribute.proto";
import "nftmngr/latest/action_of_schema.proto";
import "nftmngr/latest/executor_of_schema.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types";

// GenesisState defines the nftmngr module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated NFTSchema nFTSchemaList = 2 [(gogoproto.nullable) = false];
  repeated NftData nftDataList = 3 [(gogoproto.nullable) = false];
  repeated ActionByRefId actionByRefIdList = 4 [(gogoproto.nullable) = false];
  repeated Organization organizationList = 5 [(gogoproto.nullable) = false];
  repeated NFTSchemaByContract nFTSchemaByContractList = 7 [(gogoproto.nullable) = false];
  NFTFeeConfig nft_fee_config = 8;
  NFTFeeBalance nFTFeeBalance = 9;
  repeated MetadataCreator metadataCreatorList = 10 [(gogoproto.nullable) = false];
  repeated NftCollection nftCollectionList = 11 [(gogoproto.nullable) = false];
  repeated ActionExecutor actionExecutorList = 12 [(gogoproto.nullable) = false];
  repeated SchemaAttribute schemaAttributeList = 13 [(gogoproto.nullable) = false];
  repeated ActionOfSchema actionOfSchemaList = 14 [(gogoproto.nullable) = false];
  repeated ExecutorOfSchema executorOfSchemaList = 15 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
